--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
         "guzzle/guzzle": "3.8.*",
         "symfony/config": "2.5.x-dev",
         "symfony/yaml": "2.5.x-dev",
-        "twig/twig": "1.15.*"
+        "twig/twig": "1.15.*",
+        "doctrine/cache": "1.4.*"
     },
     "autoload": {
         "psr-0": {
